--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,3 +12,7 @@ environment:
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
+dependencies:
+  mason_logger: ^0.2.3
+  pub_updater: ^0.2.3
+  pubspec_parse: ^1.2.1
