--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
 dependencies:
+  change_case: ^1.0.2
   mason_logger: ^0.2.3
   pub_updater: ^0.2.3
   pubspec_parse: ^1.2.1
