--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dev_dependencies:
   test: ^1.16.0
 dependencies:
   change_case: ^1.0.2
+  date_format: ^2.0.7
   mason_logger: ^0.2.3
   pub_updater: ^0.2.3
   pubspec_parse: ^1.2.1
